src/objects/Fulfillment_Item__c.object
<CustomObject>
    <description>This object provides a list of all active or inactive fulfillment items available in P&amp;G.  CR Agents will perform a search of this table to select the appropriate fulfillment items to send to Consumers.  Fulfillment item master data will be loaded my P&amp;G regional admins.</description>
    <fields>
        <fullName>APPLICATION_IDENTIFIER__c</fullName>
        <label>APPLICATION IDENTIFIER</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Level_Card_Choice__c</fullName>
        <label>Access Level - Card Choice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check field for fulfillment item to be available immediately</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Fulfillment_GCR_CID__c</fullName>
        <inlineHelpText>Enter the Quick Code associated with the comment path you want to default the item; use semi colon to seperate multiples (1001; 3001).</inlineHelpText>
        <label>Auto Fulfillment GCR_CID</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Begin_DT__c</fullName>
        <label>Begin DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Brand_ID__c</fullName>
        <label>Brand ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundle_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bundle Parent</label>
        <referenceTo>Fulfillment_Item__c</referenceTo>
        <relationshipLabel>Fulfillment Items</relationshipLabel>
        <relationshipName>R00N70000001w0ckEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COMPANY_PREFIX_VLI__c</fullName>
        <label>COMPANY PREFIX VLI</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COMPANY_PREFIX__c</fullName>
        <label>COMPANY PREFIX</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_GL_Account__c</fullName>
        <label>Card GL Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Digit__c</fullName>
        <label>Check Digit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Country_Code__c</fullName>
        <label>City Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Conga Template used for Fulfillment Order cover letter.</description>
        <inlineHelpText>Conga Template used for Fulfillment Order cover letter.</inlineHelpText>
        <label>Conga Template</label>
        <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
        <relationshipLabel>Fulfillment Items</relationshipLabel>
        <relationshipName>Fulfillment_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Center__c</fullName>
        <label>Contact Center</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>AMR BR</fullName>
                </value>
                <value>
                    <fullName>AMR DPIC</fullName>
                </value>
                <value>
                    <fullName>AMR LA SY</fullName>
                </value>
                <value>
                    <fullName>AMR NA</fullName>
                </value>
                <value>
                    <fullName>AMR NA Crisis Full</fullName>
                </value>
                <value>
                    <fullName>AMR NA CVG</fullName>
                </value>
                <value>
                    <fullName>AMR NA IAMS Crisis</fullName>
                </value>
                <value>
                    <fullName>AMR NA Petcare</fullName>
                </value>
                <value>
                    <fullName>AMR NA PSS</fullName>
                </value>
                <value>
                    <fullName>AMR NA SY</fullName>
                </value>
                <value>
                    <fullName>AMR WST</fullName>
                </value>
                <value>
                    <fullName>China P&amp;G</fullName>
                </value>
                <value>
                    <fullName>China Sykes</fullName>
                </value>
                <value>
                    <fullName>Crisis CN Contact Center</fullName>
                </value>
                <value>
                    <fullName>Crisis Contact Center - Brazil</fullName>
                </value>
                <value>
                    <fullName>Crisis Contact Center - China</fullName>
                </value>
                <value>
                    <fullName>Crisis Contact Center - France</fullName>
                </value>
                <value>
                    <fullName>Crisis Contact Center - Germany</fullName>
                </value>
                <value>
                    <fullName>Crisis Contact Center - Japan</fullName>
                </value>
                <value>
                    <fullName>Crisis Contact Center - Korea</fullName>
                </value>
                <value>
                    <fullName>Crisis Contact Center – Nordics</fullName>
                </value>
                <value>
                    <fullName>Crisis Contact Center - UK</fullName>
                </value>
                <value>
                    <fullName>Crisis Contact Center - US</fullName>
                </value>
                <value>
                    <fullName>Crisis Contact Centre – Southern Europe</fullName>
                </value>
                <value>
                    <fullName>Crisis DE Contact Center</fullName>
                </value>
                <value>
                    <fullName>Crisis DK Contact Center</fullName>
                </value>
                <value>
                    <fullName>Crisis ES Contact Center</fullName>
                </value>
                <value>
                    <fullName>Crisis FI Contact Center</fullName>
                </value>
                <value>
                    <fullName>Crisis FR Contact Center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Country__c</fullName>
        <label>Contact Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Guatemala</fullName>
                </value>
                <value>
                    <fullName>Honduras</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Language__c</fullName>
        <label>Contact Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Malay</fullName>
                </value>
                <value>
                    <fullName>Tagalog</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Chinese-T</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>English-US</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>English-GB</fullName>
                </value>
                <value>
                    <fullName>Flemish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Ukrainian</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Slovakian</fullName>
                </value>
                <value>
                    <fullName>Slovenian</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coupon_Description__c</fullName>
        <label>Coupon Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coupon_Type__c</fullName>
        <label>Coupon Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crisis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Crisis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DO_NOT_MULTIPLY__c</fullName>
        <label>DO NOT MULTIPLY</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description must be 80 characters or less.</description>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAN_Code__c</fullName>
        <label>EAN Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_DT__c</fullName>
        <label>End DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Code__c</fullName>
        <label>Family Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_ID__c</fullName>
        <label>Form ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fulfillment Bundle</label>
        <referenceTo>Fulfillment_Bundle__c</referenceTo>
        <relationshipLabel>Fulfillment Items</relationshipLabel>
        <relationshipName>Fulfillment_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Company_ID__c</fullName>
        <label>Fulfillment Company ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Item_Group_ID__c</fullName>
        <label>Fulfillment Item Group ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Item_ID__c</fullName>
        <displayFormat>F-{0000000}</displayFormat>
        <label>Fulfillment Item ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Hermes_Country__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hermes Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <label>Instructions</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MISC_ELEMENTS__c</fullName>
        <label>MISC ELEMENTS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer_ID__c</fullName>
        <label>Manufacturer ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSC__c</fullName>
        <label>NSC</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Budget_Code__c</fullName>
        <label>PG Budget Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Country_Code__c</fullName>
        <label>PG Country Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Department_Number__c</fullName>
        <label>PG Department Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIMARY_PURCHASE_REQ_CODE__c</fullName>
        <label>PRIMARY PURCHASE REQ CODE</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIMARY_PURCHASE_REQ_VLI__c</fullName>
        <label>PRIMARY PURCHASE REQ VLI</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIMARY_PURCHASE_REQ__c</fullName>
        <label>PRIMARY PURCHASE REQ</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_G_GL_Account_Number__c</fullName>
        <label>P&amp;G GL Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Id__c</fullName>
        <label>Partner Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preprinted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preprinted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Id__c</fullName>
        <description>This field belongs to Prepaid card solution project</description>
        <label>Program Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Count__c</fullName>
        <inlineHelpText>Tracks the current number of items given to consumers; i.e. the original Promo Limit was 100 and 25 of those items were given to consumer, this field would read 25.</inlineHelpText>
        <label>Auto Fulfillment items sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promo_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Will uncheck when Limit has been reached. Item will no longer be sent out.</inlineHelpText>
        <label>Auto Fulfillment Item Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promo_Limit__c</fullName>
        <inlineHelpText>Tracks how many fulfillment items are available to send out. Number will decrease as items are sent. When reaches 0, Active will uncheck and item will no longer be sent out.</inlineHelpText>
        <label>Auto Fulfillment Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promo_Quantity__c</fullName>
        <inlineHelpText>Represents the quantity of fulfillment items you want the agents to default. For example, you want 2 MACH3 Coupons to default; you would enter 2 versus 1 in this field.</inlineHelpText>
        <label>Auto Fuflillment Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promo_Segment__c</fullName>
        <label>Auto Fulfillment Segment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Promo_Template_Id__c</fullName>
        <inlineHelpText>Replaces the letter that defaults for you contact center with another letter, enter the letter template ID. This ID can be found in the URL of the actual Conga Merge Template.</inlineHelpText>
        <label>Auto Fulfillment Letter Template ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchasing_SKU__c</fullName>
        <label>Purchasing SKU</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RL_Address_Line_1__c</fullName>
        <label>RL Address Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RL_Address_Line_2__c</fullName>
        <label>RL Address Line 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RL_Address_Line_3__c</fullName>
        <label>RL Address Line 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RL_Permit_City_State__c</fullName>
        <label>RL Permit City State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RL_Permit_Number__c</fullName>
        <label>RL Permit Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Priority</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resend_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to resend Fulfillment item to Hermes</inlineHelpText>
        <label>Resend Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail_Value__c</fullName>
        <label>Retail Value</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAVE_VALUES_APPLIES_TO__c</fullName>
        <label>SAVE_VALUES_APPLIES_TO</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAVE_VALUE_CODE__c</fullName>
        <label>SAVE VALUE CODE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAVE_VALUE_VLI__c</fullName>
        <label>SAVE VALUE VLI</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAVE_VALUE__c</fullName>
        <label>SAVE_VALUE</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SERIAL_NUMBER_CODE__c</fullName>
        <label>SERIAL_NUMBER_CODE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Item_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stock Item Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Store_Coupon__c</fullName>
        <label>Store Coupon</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CP</fullName>
                </value>
                <value>
                    <fullName>CR</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DD</fullName>
                </value>
                <value>
                    <fullName>EL</fullName>
                </value>
                <value>
                    <fullName>ET</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>FU</fullName>
                </value>
                <value>
                    <fullName>GI</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MM</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MP</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>PI</fullName>
                </value>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>RC</fullName>
                </value>
                <value>
                    <fullName>RE</fullName>
                </value>
                <value>
                    <fullName>RL</fullName>
                </value>
                <value>
                    <fullName>RP</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Code__c</fullName>
        <label>UPC Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Fulfillment Item</label>
    <listViews>
        <fullName>AA_Australia</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Segment__c</columns>
        <columns>Contact_Country__c</columns>
        <columns>Contact_Language__c</columns>
        <columns>Contact_Center__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AA-Australia</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AA_Indonesia</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Segment__c</columns>
        <columns>Contact_Country__c</columns>
        <columns>Contact_Language__c</columns>
        <columns>Contact_Center__c</columns>
        <columns>Active__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Country__c</field>
            <operation>equals</operation>
            <value>Indonesia</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Critical</value>
        </filters>
        <label>AA-Indonesia</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AA_Malaysia</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Segment__c</columns>
        <columns>Contact_Country__c</columns>
        <columns>Contact_Language__c</columns>
        <columns>Contact_Center__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Country__c</field>
            <operation>equals</operation>
            <value>Malaysia</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AA-Malaysia</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AA_Singapore</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Segment__c</columns>
        <columns>Contact_Country__c</columns>
        <columns>Contact_Language__c</columns>
        <columns>Contact_Center__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Country__c</field>
            <operation>equals</operation>
            <value>Singapore</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AA-Singapore</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AA_Thailand</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Segment__c</columns>
        <columns>Contact_Country__c</columns>
        <columns>Contact_Language__c</columns>
        <columns>Contact_Center__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Country__c</field>
            <operation>equals</operation>
            <value>Thailand</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AA-Thailand</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AA_Vietnam</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Segment__c</columns>
        <columns>Contact_Country__c</columns>
        <columns>Contact_Language__c</columns>
        <columns>Contact_Center__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Country__c</field>
            <operation>equals</operation>
            <value>Vietnam</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AA- Vietnam</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASIA_China</fullName>
        <columns>Fulfillment_Item_ID__c</columns>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Segment__c</columns>
        <columns>Type__c</columns>
        <columns>Contact_Country__c</columns>
        <columns>Contact_Language__c</columns>
        <columns>Contact_Center__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Country__c</field>
            <operation>contains</operation>
            <value>China</value>
        </filters>
        <label>ASIA China</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact_Country__c</columns>
        <columns>Contact_Language__c</columns>
        <columns>Active__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Argentina</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Segment__c</columns>
        <columns>Contact_Country__c</columns>
        <columns>Contact_Language__c</columns>
        <columns>Active__c</columns>
        <columns>Type__c</columns>
        <columns>Fulfillment_Item_Group_ID__c</columns>
        <columns>Fulfillment_Company_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Country__c</field>
            <operation>equals</operation>
            <value>Argentina</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>CP</value>
        </filters>
        <label>Argentina</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Austria</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Segment__c</columns>
        <columns>Contact_Country__c</columns>
        <columns>Contact_Language__c</columns>
        <columns>Active__c</columns>
        <columns>Type__c</columns>
        <columns>Fulfillment_Item_Group_ID__c</columns>
        <columns>Fulfillment_Company_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Country__c</field>
            <operation>equals</operation>
            <value>Austria</value>
        </filters>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
            <value>braun</value>
        </filters>
        <label>Austria</label>
        <language>en_US</language>
    </listViews>
</CustomObject>